Supernova/Samples/Errors/ManyUnexpectedEndif.nova
Application title = Error.

I want window and window title = Error.
Window height = 130.


endif
endif

do if [x] = (1).
endif

endif
endif